// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTableReducer reducer should handle OPEN_SELECT_ALL 1`] = `
Object {
  "tasksTableQuery": Object {
    "selectedRows": Array [],
    "showSelectAll": true,
  },
}
`;

exports[`TasksTableReducer reducer should handle SELECT_ALL_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "allRowsSelected": true,
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle SELECT_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "selectedRows": Array [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
    ],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SET_PAGINATION 1`] = `
Object {
  "tasksTableQuery": Object {
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SET_SORT 1`] = `
Object {
  "tasksTableQuery": Object {
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle TASKS_TABLE_SUCCESS 1`] = `
Object {
  "tasksTableQuery": Object {
    "actionName": undefined,
    "itemCount": 120,
    "pagination": Object {
      "page": 3,
      "perPage": 12,
    },
    "permissions": Object {
      "edit": undefined,
    },
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should handle UNSELECT_ALL_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "allRowsSelected": false,
    "selectedRows": Array [],
    "showSelectAll": false,
  },
}
`;

exports[`TasksTableReducer reducer should handle UNSELECT_ROWS 1`] = `
Object {
  "tasksTableQuery": Object {
    "allRowsSelected": false,
    "selectedRows": Array [],
    "showSelectAll": false,
  },
}
`;

exports[`TasksTableReducer reducer should handle UNSELECT_ROWS with all rows selected 1`] = `
Object {
  "tasksTableQuery": Object {
    "allRowsSelected": false,
    "selectedRows": Array [
      3,
      4,
      5,
    ],
    "showSelectAll": false,
  },
}
`;

exports[`TasksTableReducer reducer should handle UPDATE_CLICKED 1`] = `
Object {
  "tasksTableQuery": Object {
    "clicked": "task",
    "selectedRows": Array [],
  },
}
`;

exports[`TasksTableReducer reducer should return the initial state 1`] = `
Object {
  "tasksTableQuery": Object {
    "selectedRows": Array [],
  },
}
`;
